# smime

./: .update-copyright.conf  README  README.rst  pyproject.toml
gpg_smime/: __init__.py  crypt.py  email.py  pgp.py  smtp.py
scripts/: send-pgp-mime.py
src/assuan/smime/: __init__.py  crypt.py  email.py  key.py  pgp.py  signature.py  smtp.py
src/gpg_smime/: crypt.py  email.py  smtp.py
src/smime/: __init__.py  pgp.py
tests/: key.conf  key.sh  key.txt
