[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygpg-smime"
version = "0.2.0"
description = "Tools for using Gnu Privacy Guard (GPG) with email."
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.6"
authors = [
    {name = "W. Trevor King", email = "wking@tremily.us"},
    {name = "Jesse P. Johnson", email = "jpj6652@gmail.com"}
]
maintainers = [{name = "Jesse P. Johnson", email = "jpj6652@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Communications :: Email",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development"
]
dependencies = [
    # "pyassuan==0.2.0",
    # "pypgp-assuan"
]

[project.optional-dependencies]
test = [
    "flake8>=3.8.3,<4",
    "tox>=3.24.0,<4",
    "mypy>=0.910,<1",
    "pylint>=2.9.5,<3",
    "nose2[coverage_plugin]>=0.11.0,<1",
]
doc = [
    "doc8>=0.11.2,<1",
    "docstr-coverage>=1.2.0,<2",
    "pydocstyle[toml]>=6.1.1,<7"
]
format = [
    "click==8.0.4",
    "black==22.1.0",
    "isort>=5.9.2,<6"
]
build = [
    "build>=0.7.0,<1",
    "wheel>=0.37.1,<1"
]

[project.urls]
homepage = "http://blog.tremily.us/posts/pgp-mime/"
repository = "https://github.com/wking/pgp-mime.git"

[tool.pydocstyle]
ignore = ["D203", "D213"]

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
    | _build
    | dist
  )
)
'''

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
