[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assuan-smime"
version = "0.3"
description = "Tools for using Gnu Privacy Guard (GPG) with email."
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.6"
authors = [
    {name = "Jesse P. Johnson", email = "jpj6652@gmail.com"},
    {name = "W. Trevor King", email = "wking@tremily.us"},
]
maintainers = [{name = "Jesse P. Johnson", email = "jpj6652@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Email",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development",
]
dependencies = [
    # "chardet>=5,<6",
    "assuan>=0.2.1b1,<1",
]

[project.optional-dependencies]
dev = [
    "build>=0.7.0,<1",
    "proman-versioning>=0.5.0-alpha.2",
    "flake8>=3.8.3,<4",
    "mypy>=0.942,<1",
    "pylint>=2.9.5,<3",
    "click==8.0.4",
    "black==22.1.0",
    "isort>=5.9.2,<6",
    "bandit>=1.6.2",
    "safety>=1.9",
    "pytest>=7",
    "pytest-cov>=2.10",
    "tox>=3.24.0,<4",
    "twine>=4.0.2,<5",
]
docs = [
    "sphinx>=5.3",
    "sphinx-autodoc-typehints>=1.19.5",
    "doc8>=0.11.2,<1",
    "docstr-coverage>=1.2.0,<2",
    "pydocstyle[toml]>=6.1.1,<7",
]

[project.urls]
homepage = "http://github.com/pygpg/smime/"
repository = "https://github.com/pygpg/smime.git"

[tool.setuptools]
packages = ["assuan.smime"]

[tool.setuptools.package-dir]
"assuan.smime" = "src/assuan/smime"

[tool.proman.versioning]
enable_devreleases = false

[[tool.proman.versioning.files]]
filepath = "pyproject.toml"
pattern = "version = \"${version}\""

[[tool.proman.versioning.files]]
filepath = "src/smime/__init__.py"
pattern = "__version__ = '${version}'"

[[tool.proman.versioning.files]]
filepath = "tests/test_version.py"
pattern = "__version__ == '${version}'"

[tool.pydocstyle]
ignore = [
    "D203",
    "D213",
]

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
    | build
    | dist
  )
)
'''

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

# [tool.pylint]
# fail-under = 9.0

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "R0903",
    "C0103",
    "W0715",
]

[tool.pylint."FORMAT"]
max-line-length = 79

[tool.pylint."MISCELLANEOUS"]
notes = []

[tool.pytest.ini_options]
addopts = "--doctest-modules"
